--- a/colab_notebook.ipynb
+++ b/colab_notebook.ipynb
@@ -49,6 +49,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1m5tntO0mes-eduC1n-6egKyFethVRqKm' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1m5tntO0mes-eduC1n-6egKyFethVRqKm\" -O train_data.zip && rm -rf /tmp/cookies.txt\n"
+      ],
+      "metadata": {
+        "id": "zBaNTfqFqWod"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "1OJIjelyFEQ1"
@@ -56,7 +67,7 @@
       "outputs": [],
       "source": [
         "!pip install transformers\n",
-        "!unzip /content/drive/MyDrive/Innopolis/SiML/Project/jigsaw-toxic-comment-classification-challenge.zip\n",
+        "!unzip /content/train_data.zip\n",
         "!unzip train.csv.zip;"
       ]
     },
