--- a/Model_Text_Classification.ipynb
+++ b/Model_Text_Classification.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1cGZzLz73CI2YomjvoRh2lr4lD3z31x3j",
-      "authorship_tag": "ABX9TyP0huorDrbgWntuOISEVWMe"
+      "authorship_tag": "ABX9TyMV3qZKi70dl1+ZvqPEq3CB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -1391,6 +1392,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/naryst/toxic_comments_classification/blob/master/Model_Text_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "In this notebook i will train the model that i will try to attack. \n",
         "\n",
@@ -1477,7 +1488,7 @@
         "from transformers import BertTokenizer, BertModel\n",
         "\n",
         "from tqdm import tqdm\n",
-        "\n",
+        "import os\n",
         "\n",
         "device = torch.device('cpu')\n",
         "if torch.cuda.is_available():\n",
@@ -1486,7 +1497,7 @@
       "metadata": {
         "id": "bA4GMHWkFLh-"
       },
-      "execution_count": 2,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -1536,6 +1547,7 @@
         "import os\n",
         "\n",
         "path = \"./\"\n",
+        "COLAB_PATH = \"/content/drive/MyDrive/Innopolis/SiML/Project/\"\n",
         "train_df = pd.read_csv(os.path.join(path, 'train.csv'))\n",
         "train_df.head(10)"
       ],
@@ -1545,9 +1557,9 @@
           "height": 363
         },
         "id": "jUTSrEypGQm5",
-        "outputId": "82534641-8a18-45bc-b152-9bfaaec5f513"
+        "outputId": "47fd6fbf-19e0-41c9-c974-7192deffa3a8"
       },
-      "execution_count": 4,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1579,7 +1591,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-42b3dc37-9e00-45eb-9097-82f30318eaa7\">\n",
+              "  <div id=\"df-b31363b2-c6f5-4308-9092-0e8c447072a4\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1723,7 +1735,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-42b3dc37-9e00-45eb-9097-82f30318eaa7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b31363b2-c6f5-4308-9092-0e8c447072a4')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1774,12 +1786,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-42b3dc37-9e00-45eb-9097-82f30318eaa7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b31363b2-c6f5-4308-9092-0e8c447072a4 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-42b3dc37-9e00-45eb-9097-82f30318eaa7');\n",
+              "          const element = document.querySelector('#df-b31363b2-c6f5-4308-9092-0e8c447072a4');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1802,7 +1814,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 56
         }
       ]
     },
@@ -1814,7 +1826,7 @@
       "metadata": {
         "id": "fD9Px-ma5q-Y"
       },
-      "execution_count": 5,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1827,9 +1839,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vJiExNPT6O2s",
-        "outputId": "b8e4c32f-2d7a-4c6a-de50-75c1f2774131"
+        "outputId": "a9591376-a37c-42d2-9838-b141d3d9a272"
       },
-      "execution_count": 6,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1847,7 +1859,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_df.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1kA0WXYgXaP4",
+        "outputId": "9ce7430c-35ed-43c2-cb0e-727da3ff8e03"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(159571, 9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
         }
       ]
     },
@@ -1865,13 +1903,69 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_df, val_df = train_test_split(train_df, test_size=0.05)"
+        "df_train, df_valid = train_test_split(train_df, test_size=0.2, stratify=train_df[\"toxic\"])"
       ],
       "metadata": {
         "id": "nQ3AvxJGAq6o"
       },
-      "execution_count": 7,
+      "execution_count": 60,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train = pd.concat(\n",
+        "        [\n",
+        "            df_train[df_train[\"toxic\"] == 0].sample(\n",
+        "                5000, random_state=199, replace=False\n",
+        "            ),\n",
+        "            df_train[df_train[\"toxic\"] == 1].sample(\n",
+        "                5000, random_state=199, replace=False\n",
+        "            ),\n",
+        "        ]\n",
+        "    )\n",
+        "df_valid = pd.concat(\n",
+        "        [\n",
+        "            df_valid[df_valid[\"toxic\"] == 0].sample(\n",
+        "                500, random_state=199, replace=False\n",
+        "            ),\n",
+        "            df_valid[df_valid[\"toxic\"] == 1].sample(\n",
+        "                500, random_state=199, replace=False\n",
+        "            ),\n",
+        "        ]\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "Hu4v7slYXl4l"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.shape, df_valid.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YoPgQ53CX4yl",
+        "outputId": "aea86050-6af3-4644-9f4a-70d896717b61"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((10000, 9), (1000, 9))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1954,8 +2048,8 @@
         "bert_model_name = 'bert-base-cased'\n",
         "tokenizer = BertTokenizer.from_pretrained(bert_model_name)\n",
         "\n",
-        "train_dataset = ToxicDataset(tokenizer, train_df)\n",
-        "val_dataset = ToxicDataset(tokenizer, val_df)\n",
+        "train_dataset = ToxicDataset(tokenizer, df_train)\n",
+        "val_dataset = ToxicDataset(tokenizer, df_valid)\n",
         "\n",
         "BATCH_SIZE = 32\n",
         "train_sampler = RandomSampler(train_dataset)\n",
@@ -2158,7 +2252,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model.load_state_dict(torch.load(\"/content/drive/MyDrive/Innopolis/NLP/Project/model.pt\", map_location=torch.device('cpu')))"
+        "model.load_state_dict(torch.load(os.path.join(COLAB_PATH, \"model.pt\"), map_location=torch.device('cpu')))"
       ],
       "metadata": {
         "id": "g6QR-A2TB_2B",
@@ -2692,21 +2786,10 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.save(model.state_dict(), \"/content/drive/MyDrive/Innopolis/SiML/Project/model.pt\")"
+        "torch.save(model.state_dict(), os.path.join(COLAB_PATH, \"model.pt\"))"
       ],
       "metadata": {
         "id": "ujBm5k0-TUJL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "evaluate(model, val_iterator)"
-      ],
-      "metadata": {
-        "id": "Yc2dH9vtknQY"
       },
       "execution_count": null,
       "outputs": []
@@ -2829,7 +2912,6 @@
         "\n",
         "\n",
         "def interpret_text(text, true_class):\n",
-        "\n",
         "    input_ids, baseline_input_ids, all_tokens = construct_input_and_baseline(text)\n",
         "    attributions, delta = lig.attribute(inputs= input_ids,\n",
         "                                    baselines= baseline_input_ids,\n",
@@ -2838,36 +2920,27 @@
         "                                    )\n",
         "    attributions_sum = summarize_attributions(attributions)\n",
         "\n",
-        "    score_vis = viz.VisualizationDataRecord(\n",
-        "                        word_attributions = attributions_sum,\n",
-        "                        pred_prob = torch.max(model(input_ids)[0]),\n",
-        "                        pred_class = torch.argmax(model(input_ids)[0]).numpy(),\n",
-        "                        true_class = true_class,\n",
-        "                        attr_class = text,\n",
-        "                        attr_score = attributions_sum.sum(),       \n",
-        "                        raw_input_ids = all_tokens,\n",
-        "                        convergence_score = delta)\n",
+        "    ig = {}\n",
+        "    for i in range(len(all_tokens)):\n",
+        "        ig[all_tokens[i]] = float(attributions_sum[i])\n",
         "\n",
-        "    viz.visualize_text([score_vis])"
+        "    return ig\n",
+        "    # score_vis = viz.VisualizationDataRecord(\n",
+        "    #                     word_attributions = attributions_sum,\n",
+        "    #                     pred_prob = torch.max(model(input_ids)[0]),\n",
+        "    #                     pred_class = torch.argmax(model(input_ids)[0]).numpy(),\n",
+        "    #                     true_class = true_class,\n",
+        "    #                     attr_class = text,\n",
+        "    #                     attr_score = attributions_sum.sum(),       \n",
+        "    #                     raw_input_ids = all_tokens,\n",
+        "    #                     convergence_score = delta)\n",
+        "\n",
+        "    # viz.visualize_text([score_vis])"
       ],
       "metadata": {
         "id": "KYPBA_SsL42J"
       },
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with torch.no_grad():\n",
-        "        mask = (x != 0).float()\n",
-        "        outputs = model(\"help\\n\\nWhy does this Twigboy idiot keep vandalizing this page? Thank you. 71.72.172.177\", attention_mask=mask)\n",
-        "        print(outputs)"
-      ],
-      "metadata": {
-        "id": "r8gKB8sERS3h"
-      },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -2877,27 +2950,44 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
+          "base_uri": "https://localhost:8080/"
         },
         "id": "E2X7HB2YN1cL",
-        "outputId": "1e56c7bf-447b-46de-c488-b1466cf548f9"
+        "outputId": "c71ca011-0f0d-479b-df24-f7416a01898f"
       },
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "display_data",
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<table width: 100%><div style=\"border-top: 1px solid; margin-top: 5px;             padding-top: 5px; display: inline-block\"><b>Legend: </b><span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(0, 75%, 60%)\"></span> Negative  <span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(0, 75%, 100%)\"></span> Neutral  <span style=\"display: inline-block; width: 10px; height: 10px;                 border: 1px solid; background-color:                 hsl(120, 75%, 50%)\"></span> Positive  </div><tr><th>True Label</th><th>Predicted Label</th><th>Attribution Label</th><th>Attribution Score</th><th>Word Importance</th><tr><td><text style=\"padding-right:2em\"><b>2</b></text></td><td><text style=\"padding-right:2em\"><b>0 (0.80)</b></text></td><td><text style=\"padding-right:2em\"><b>help\n",
-              "\n",
-              "Why does this Twigboy idiot keep vandalizing this page? Thank you. 71.72.172.177</b></text></td><td><text style=\"padding-right:2em\"><b>0.62</b></text></td><td><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [CLS]                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> help                    </font></mark><mark style=\"background-color: hsl(120, 75%, 98%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> Why                    </font></mark><mark style=\"background-color: hsl(120, 75%, 99%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> does                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> this                    </font></mark><mark style=\"background-color: hsl(0, 75%, 97%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> T                    </font></mark><mark style=\"background-color: hsl(0, 75%, 99%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ##wig                    </font></mark><mark style=\"background-color: hsl(0, 75%, 93%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ##boy                    </font></mark><mark style=\"background-color: hsl(120, 75%, 52%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> idiot                    </font></mark><mark style=\"background-color: hsl(0, 75%, 97%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> keep                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> van                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ##dal                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ##izing                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> this                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> page                    </font></mark><mark style=\"background-color: hsl(120, 75%, 99%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> ?                    </font></mark><mark style=\"background-color: hsl(0, 75%, 96%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> Thank                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> you                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> .                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> 71                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> .                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> 72                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> .                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> 172                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> .                    </font></mark><mark style=\"background-color: hsl(120, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> 177                    </font></mark><mark style=\"background-color: hsl(0, 75%, 100%); opacity:1.0;                     line-height:1.75\"><font color=\"black\"> [SEP]                    </font></mark></td><tr></table>"
+              "{'[CLS]': 0.0,\n",
+              " 'help': -0.015692195242118238,\n",
+              " 'Why': 0.04605817678689758,\n",
+              " 'does': 0.037578812487626866,\n",
+              " 'this': -0.00878001249931156,\n",
+              " 'T': -0.08341811289851425,\n",
+              " '##wig': -0.049362392345385295,\n",
+              " '##boy': -0.17510285610595602,\n",
+              " 'idiot': 0.9674657340044484,\n",
+              " 'keep': -0.07740784228187161,\n",
+              " 'van': -0.017647117918557487,\n",
+              " '##dal': -0.0012810146478975854,\n",
+              " '##izing': -0.005869818487356534,\n",
+              " 'page': 0.005907823910160746,\n",
+              " '?': 0.03016836719379461,\n",
+              " 'Thank': -0.10847264790800977,\n",
+              " 'you': 0.017316368681293593,\n",
+              " '.': 0.011631320230420286,\n",
+              " '71': 0.002336206982799368,\n",
+              " '72': 0.0016917866460619722,\n",
+              " '172': 0.0052698634260508566,\n",
+              " '177': 0.002098220193718414,\n",
+              " '[SEP]': 0.0}"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "execution_count": 40
         }
       ]
     },
