update some text information

--- a/Model_Text_Classification.ipynb
+++ b/Model_Text_Classification.ipynb
@@ -5545,7 +5545,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Idea I got from this article: https://arxiv.org/pdf/1907.11932.pdf"
+        "The TextFooler attack is a type of adversarial attack designed specifically for NLP tasks. It is a word-level attack that aims to generate small perturbations to the input text that can cause a well-performing model to misclassify the input.\n",
+        "\n",
+        "The TextFooler attack works by first identifying the most important words in the input text using a semantic relevance score based on word embeddings. It then replaces these important words with synonyms that have similar meanings but are less likely to be classified correctly by the target model. The attack iteratively selects the important words and substitutes them with their synonyms until the model's prediction changes."
+      ],
+      "metadata": {
+        "id": "2TxohMdx24RR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The TextFooler attack is a type of iterative gradient-based attack, similar to the PGD (Projected Gradient Descent) attack. However, unlike PGD, the TextFooler attack operates at the word level, and generates perturbations by replacing important words with their synonyms, rather than modifying the word embeddings directly.\n",
+        "\n",
+        " Idea I got from this article: https://arxiv.org/pdf/1907.11932.pdf"
       ],
       "metadata": {
         "id": "fzaT9OP2tjh7"
@@ -5920,8 +5933,8 @@
         "    :params import_score_threshold: threshold for getting word to perturb\n",
         "    :params min_cos_sim: threshold for finding synonims\n",
         "    :params max_num_change: max num for replacing word by synonims in sentence\n",
-        "    \n",
-        "    :return: (attacked text, new probability, Sim(attacked text, text_ls))\n",
+        "\n",
+        "    :return: [attacked text, changed_word_idx, original label, original probability of label, new probability, Sim(attacked text, original text)]\n",
         "    \"\"\"\n",
         "    # initialize some important value\n",
         "    len_text = len(text_ls)\n",
