--- a/Model_Text_Classification.ipynb
+++ b/Model_Text_Classification.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
       "include_colab_link": true
     },
@@ -16,7 +15,6 @@
       "name": "python"
     },
     "gpuClass": "standard",
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "f9c863f06ddf4b1b8fb08b524236f362": {
@@ -2673,14 +2671,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Given a corpus of N sentences X = {X1, X2, . . . , XN },\n",
-        "and a corresponding set of N labels Y = {Y1, Y2, . . . , YN },\n",
-        "we have a pre-trained model F : X → Y, which maps the\n",
+        "Given a corpus of N sentences $X$ = $\\{X_1, X_2, . . . , X_N \\}$,\n",
+        "and a corresponding set of N labels $Y$ = $\\{Y_1, Y_2, . . . , Y_N \\}$,\n",
+        "we have a pre-trained model F : X $→$ Y, which maps the\n",
         "input text space X to the label space Y.\n",
-        "For a sentence X_i ∈ X , a valid adversarial example X_adv\n",
+        "For a sentence $X_i ∈ X$, a valid adversarial example $X_{adv}$\n",
         "should conform to the following requirements:\n",
         "\n",
-        "F(X_adv) != F(X), and Sim(X_adv, X) ≥ eps, Where Sim() is similarity function "
+        "$F(X_{adv}) \\neq F(X_i)$, and $Sim(X_{adv}, X_i) ≥ \\epsilon$, Where $Sim$ is similarity function "
       ],
       "metadata": {
         "id": "n1ev8bHLtyBJ"
@@ -2973,8 +2971,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def pos_filter(ori_pos, new_pos_list):\n",
-        "    same = [True if ori_pos == new_pos or (set([ori_pos, new_pos]) <= set(['NOUN', 'VERB']))\n",
+        "def pos_filter(orig_pos, new_pos_list):\n",
+        "    same = [True if orig_pos == new_pos or (set([orig_pos, new_pos]) <= set(['NOUN', 'VERB']))\n",
         "            else False\n",
         "            for new_pos in new_pos_list]\n",
         "    return same"
@@ -3120,14 +3118,14 @@
         "            new_probs_mask *= pos_mask\n",
         "\n",
         "            if np.sum(new_probs_mask) > 0:\n",
-        "                # if we after filtering we have candidates, then return it\n",
+        "                # if after filtering we have candidates, then return it\n",
         "                text_prime[idx] = synonyms[(new_probs_mask * semantic_sims).numpy().argmax()]\n",
         "                text_colored_ind.add(idx)\n",
         "                return [text_prime, text_colored_ind, orig_label, orig_prob,\n",
         "                        prediction(model, [' '.join(text_prime)], False),\n",
         "                        sim_predictor.semantic_sim([' '.join(text_ls)], [' '.join(text_prime)])]\n",
         "            else:\n",
-        "                # if we after filtering we have no candidates, then take this value, which \n",
+        "                # if after filtering we have no candidates, then take this value, which \n",
         "                # decrease as much as possible our probability of original class\n",
         "                new_label_probs = new_probs[:, orig_label] + torch.from_numpy(\n",
         "                        (semantic_sims < sim_score_threshold).numpy().astype(int) * 10 + (1 - pos_mask).astype(float) * 10).float().cuda()\n",
@@ -3158,7 +3156,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Get aversarial results"
+        "# Get adversarial results"
       ],
       "metadata": {
         "id": "T_NvFIq5Xhjk"
@@ -4228,7 +4226,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        " **Conclusion:** In my case, original model on valid dataset shows worse result in comparsion with adversarial trained model. But we should keep in mind, that situation can be vice versa, when trained adversarial model shows worse results (it called **trade-off between robustness and accuracy**)."
+        " **Conclusion:** In our case, original model on valid dataset shows worse result in comparsion with adversarial trained model. But we should keep in mind, that situation can be vice versa, when trained adversarial model shows worse results (it called **trade-off between robustness and accuracy**)."
       ],
       "metadata": {
         "id": "6SYnA9SJPwbf"
